# briefcase

./: LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: constants.py  main.py  message.py
backend/scripts/: build_embeddings.py
frontend/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatComponent.tsx  NavBar.tsx  NavButton.module.css  NavButton.tsx  apis.ts  types.ts  utils.ts
